refactor goa design, add examples, add ListUserOrders
