# internal/gen/http/openapi.yaml
@@ -57,12 +57,60 @@ paths:
                 "400":
                     description: Bad Request response.
                 "401":
-                    description: Unauthorized response.
+                    description: User is not authenticated
                 "500":
                     description: Internal Server Error response.
             schemes:
                 - http
     /user/orders:
+        get:
+            tags:
+                - balance
+            summary: ListUserOrder balance
+            description: List user orders
+            operationId: balance#ListUserOrder
+            parameters:
+                - name: Authorization
+                  in: header
+                  description: A JWT token used to authenticate a request
+                  required: true
+                  type: string
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        type: array
+                        items:
+                            $ref: '#/definitions/Order'
+                "204":
+                    description: No orders available
+                "401":
+                    description: Missing or empty Authorization header
+                    headers:
+                        goa-attribute-fault:
+                            description: Is the error a server-side fault?
+                            type: boolean
+                        goa-attribute-id:
+                            description: ID is a unique identifier for this particular occurrence of the problem.
+                            type: string
+                        goa-attribute-message:
+                            description: Message is a human-readable explanation specific to this occurrence of the problem.
+                            type: string
+                        goa-attribute-name:
+                            description: Name is the name of this class of errors.
+                            type: string
+                        goa-attribute-temporary:
+                            description: Is the error temporary?
+                            type: boolean
+                        goa-attribute-timeout:
+                            description: Is the error a timeout?
+                            type: boolean
+                "500":
+                    description: Internal Server Error response.
+            schemes:
+                - http
+            security:
+                - jwt_header_Authorization: []
         post:
             tags:
                 - balance
@@ -111,9 +159,11 @@ paths:
                             description: Is the error a timeout?
                             type: boolean
                 "409":
-                    description: Conflict response.
+                    description: The order belongs to another user
                 "422":
-                    description: Unprocessable Entity response.
+                    description: Invalid order number
+                "500":
+                    description: Internal Server Error response.
             schemes:
                 - http
             security:
@@ -143,7 +193,7 @@ paths:
                 "400":
                     description: Bad Request response.
                 "409":
-                    description: Conflict response.
+                    description: Login is taken already
                 "500":
                     description: Internal Server Error response.
             schemes:
@@ -155,34 +205,67 @@ definitions:
         properties:
             accrual:
                 type: integer
-                example: 17322971476842261040
+                example: 839832540227140899
                 format: int64
             order:
                 type: string
-                example: Facere delectus dolores dolor aut quaerat.
+                example: Voluptate et.
             status:
                 type: string
-                example: Alias aut quibusdam nobis.
+                example: Maxime sequi qui accusamus aperiam rem.
         example:
-            accrual: 17196007522552377596
-            order: Voluptatem iusto.
-            status: Et necessitatibus ut.
+            accrual: 2402250044807314231
+            order: Magnam odit accusamus.
+            status: Ipsam consequuntur sed repellat temporibus sit consequatur.
     LoginPassword:
         title: LoginPassword
         type: object
         properties:
             login:
                 type: string
-                example: Perferendis aliquid.
+                example: Ratione sit asperiores consequuntur.
             password:
                 type: string
-                example: Consequuntur recusandae et consequuntur.
+                example: Ut et.
         example:
-            login: Omnis sint.
-            password: Nostrum ipsum.
+            login: <login>
+            password: <password>
         required:
             - login
             - password
+    Order:
+        title: Order
+        type: object
+        properties:
+            accrual:
+                type: integer
+                example: 17975470654812843867
+                format: int64
+            number:
+                type: string
+                example: "952"
+                pattern: '[1-9][0-9]*'
+            status:
+                type: string
+                example: NEW
+                enum:
+                    - NEW
+                    - PROCESSING
+                    - INVALID
+                    - PROCESSED
+            uploaded_at:
+                type: string
+                example: "2000-07-22T18:51:51Z"
+                format: date-time
+        example:
+            accrual: 786640818561411755
+            number: "772"
+            status: PROCESSING
+            uploaded_at: "1976-11-16T10:53:37Z"
+        required:
+            - number
+            - status
+            - uploaded_at
 securityDefinitions:
     jwt_header_Authorization:
         type: apiKey
